feature - endpoints of diet
