# backend/handler/health/diet/deleteMeal.go
@@ -1,0 +1,50 @@
+package diet
+
+import (
+	"github.com/EduHSilva/routine/helper"
+	"github.com/EduHSilva/routine/schemas/health/diet"
+	"github.com/gin-gonic/gin"
+	"github.com/nicksnyder/go-i18n/v2/i18n"
+	"net/http"
+)
+
+// DeleteMealHandler
+// @BasePath /api/v1
+// @Summary Delete meal
+// @Description Delete a meal
+// @Tags Diet
+// @Accept json
+// @Produce json
+// @Param id query uint64 true "id"
+// @Success 200 {object} ResponseData
+// @Failure 400 {object} helper.ErrorResponse
+// @Failure 500 {object} helper.ErrorResponse
+// @Failure 401 {object} helper.ErrorResponse
+// @Security ApiKeyAuth
+// @Param x-access-token header string true "Access token"
+// @Router /meal [DELETE]
+func DeleteMealHandler(ctx *gin.Context) {
+	id := ctx.Query("id")
+
+	getI18n, _ := ctx.Get("i18n")
+
+	if id == "" {
+		helper.SendError(ctx, http.StatusBadRequest,
+			helper.ErrParamIsRequired("id", "query param").Error())
+		return
+	}
+
+	meal := &diet.Meal{}
+
+	if err := db.First(&meal, id).Error; err != nil {
+		helper.SendErrorDefault(ctx, http.StatusNotFound, getI18n.(*i18n.Localizer))
+		return
+	}
+
+	if err := db.Delete(&meal).Error; err != nil {
+		helper.SendErrorDefault(ctx, http.StatusInternalServerError, getI18n.(*i18n.Localizer))
+		return
+	}
+
+	helper.SendSuccess(ctx, ConvertMealToResponse(meal))
+}
